got the formatting for #alert to work

--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -1,5 +1,6 @@
 #alert {
-    background-color: #FF8A00 !important; 
+   background-color: #FF8A00 !important; 
+   color: #FFF !important;
 }
 .btn {
    background-color: #FF8A00 !important; 
