added a light gray to the background of the page

--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -1,16 +1,20 @@
 #alert {
-   background-color: #FF8A00 !important; 
+   background-color: #f44e03 !important; 
    color: #FFF !important;
 }
 .btn {
-   background-color: #FF8A00 !important; 
+   background-color: #f44e03 !important; 
+}
+
+.container {
+    background-color: #E5EDF1;
 }
 
 h1 {
     font-weight: 200px;
 }
 h3 {
-    color: #FF8A00;
+    color: #f44e03;
 }
 
 .input-field input[type=text]:focus {
@@ -23,7 +27,7 @@ h3 {
 }
 
 .material-icons{
-    color: #FF8A00 !important;   
+    color: #f44e03 !important;   
 }
 nav {
     background-color: #03a9f4 !important;
@@ -31,5 +35,5 @@ nav {
 }
 
 .pagination li.active {
-    background-color: #FF8A00 !important;
+    background-color: #f44e03 !important;
 }
