added a 404 message and the ability to log information on a page also added some images to display on the 404 page

--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -35,10 +35,10 @@ nav {
     height: 150px !important; 
 }
 
+p {
+  color: #4c575d !important;
+}
 .pagination li.active {
     background-color: #f44e03 !important;
 }
 
-#timestamp {
-    color: #4c575d !important;
-}
