--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -1,4 +1,5 @@
 /*Blog color scheme Blue: #03a9f4 Orange: #f44e03 Light Gray: #E5EDF1 Dark Gray:#4c575d */
+
 #alert {
    background-color: #f44e03 !important; 
    color: #FFF !important;
@@ -7,14 +8,18 @@
    background-color: #f44e03 !important; 
 }
 
-.container {
-    background-color: #E5EDF1;
+h1 { 
+    font-weight: 300 !important;
+    text-transform: uppercase;
+
 }
 
-h1 {
-    font-weight: 200px;
+h2{
+  font-weight: 200 !important;
 }
+
 h3 {
+    font-weight: 100 !important;
     color: #f44e03;
 }
 
@@ -42,3 +47,12 @@ p {
     background-color: #f44e03 !important;
 }
 
+#timestamp {
+  color: #E5EDF1 !important;
+  font-style: italic;
+}
+
+#timestamp:hover {
+  color: #4c575d;
+  font-style: bold;
+}
