added css to change the color of the menu when in 'mobile mode'. doesn't work yet

--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -16,6 +16,10 @@ button a {
   color:#fff;
 }
 
+.button-collapse{
+  color: #fff !important;
+}
+
 h1 { 
     font-weight: 300 !important;
     font-family: 'Montserrat';
