--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -31,7 +31,7 @@ h1 {
 }
 
 h2{
-  font-weight: 200;
+  font-weight: 300;
 }
 
 h3 {
@@ -54,6 +54,14 @@ h3 {
 nav {
   background-color: #03a9f4;
   height: 150px; 
+}
+
+li {
+  color: #4c575d; 
+}
+
+li.flow-text {
+  padding-left: 2em;
 }
 
 p {
