--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -16,13 +16,12 @@ button a {
   color:#fff;
 }
 
-.button-collapse{
+.button-collapse {
   color: #fff;
 }
 
 footer.page-footer{
   background-color: #f44e03;
-  /*height: 100px;  */
 }
 
 h1 { 
@@ -37,6 +36,10 @@ h2{
 h3 {
   font-weight: 100;
   color: #f44e03;
+}
+
+h5 {
+  color: #4c575d; 
 }
 
 .input-field input[type=text]:focus {
