started to try fixing the positioning so that the twitter feed is to the left of the blog posts. still haven't figured it out

--- a/public/css/blog_main.css
+++ b/public/css/blog_main.css
@@ -83,6 +83,9 @@ p {
   height: 150px;
 }
 
+#post-box{
+  /*display: inline-block;*/
+}
 .slider .indicators .indicator-item.active {
   background-color: #f44e03;
 }
@@ -90,4 +93,8 @@ p {
 #timestamp {
   color: #4c575d;
   font-style: italic;
+}
+
+#twitter-box{
+  /*display: inline-block;*/
 }
